import React from 'react';
import { shallow } from 'enzyme';
import { ExpensesSummary } from '../../components/ExpensesSummary';

test('renders ExpensesSummary component with 1 expense', () => {
    const wrapper = shallow(<ExpensesSummary expenseCount={1} expensesTotal={500} />);
    expect(wrapper).toMatchSnapshot();
});

test('renders ExpensesSummary component with multiple expenses', () => {
    const wrapper = shallow(<ExpensesSummary expenseCount={2} expensesTotal={750} />);
    expect(wrapper).toMatchSnapshot();
});